# download_rs

./: .gitignore  Cargo.toml  readme.md
doc/: cargo.md
examples/: async_download_default_example.rs  async_download_example.rs  sync_download_example.rs
src/: async_download.rs  lib.rs  sync_download.rs
tests/: async_download.rs  async_download_default.rs  sync_download.rs
